updating the Donate website to https

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -412,7 +412,7 @@
         <![CDATA[
             Hola,<br><br>
             Esperem que gaudiu de l\'aplicació. No conté cap anunci, així que si us plau, ajudeu el seu desenvolupament comprant la aplicació <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>, també evitarà que aquest diàleg es torni a mostrar.<br><br>
-            Podeu trobar més opcions de donació <a href="http://simplemobiletools.com/donate">aquí</a>.<br><br>
+            Podeu trobar més opcions de donació <a href="https://simplemobiletools.com/donate">aquí</a>.<br><br>
             Gràcies!
         ]]>
     </string>
