--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -410,7 +410,7 @@
         <![CDATA[
             Hej<br><br>
             Håber du kan lide denne app. Den indeholder ingen reklamer, så vær sød at købe appen <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>, som også vil forhindre at denne besked vises igen.<br><br>
-            Du finder <a href="http://simplemobiletools.com/donate"><string name="copyright">flere muligheder for at donere her</a>.<br><br>
+            Du finder <a href="https://simplemobiletools.com/donate"><string name="copyright">flere muligheder for at donere her</a>.<br><br>
             På forhånd tak!
         ]]>
     </string>
