--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -409,7 +409,7 @@
         <![CDATA[
             Salut,<br><br>
             nous espérons que vous appréciez cette appli. Elle ne contient aucune publicité, mais vous pouvez soutenir son développement en achetant l\'appli <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Un petit Merci</a>. Cela nous permettra également de ne plus vous montrer cette boite de dialogue.<br><br>
-            Vous pouvez trouver plus d\'options pour faire un don <a href="http://simplemobiletools.com/donate">ici</a>.<br><br>
+            Vous pouvez trouver plus d\'options pour faire un don <a href="https://simplemobiletools.com/donate">ici</a>.<br><br>
             Merci !
         ]]>
     </string>
