--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -428,7 +428,7 @@
         <![CDATA[
             Pozdrav,<br><br>
             nadam se da uživate u aplikaciji. Ne sadrži reklame, stoga nas podržite njen razvoj kupovinom <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> aplikacije, što će spriječiti da se ovaj prozor ponovno pojavljuje.<br><br>
-            Dodatne opcije za doniranje potražite <a href="http://simplemobiletools.com/donate">ovdje</a>.<br><br>
+            Dodatne opcije za doniranje potražite <a href="https://simplemobiletools.com/donate">ovdje</a>.<br><br>
             Hvala Vam!
         ]]>
     </string>
