--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -410,7 +410,7 @@
         <![CDATA[
             Ciao,<br><br>
             spero che tu sia contento dell\'app. Non contiene pubblicità, per favore supportane lo sviluppo acquistando l\'app <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>. Inoltre questa finestra non verrà più mostrata.<br><br>
-            Puoi trovare ulteriori opzioni di donazione <a href="http://simplemobiletools.com/donate">qui</a>.<br><br>
+            Puoi trovare ulteriori opzioni di donazione <a href="https://simplemobiletools.com/donate">qui</a>.<br><br>
             Grazie!
         ]]>
     </string>
