--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -410,7 +410,7 @@
         <![CDATA[
             Olá,<br><br>
             espero que esteja a gostar desta aplicação. Não possui anúncios e é open source. Se quiser ajudar no desenvolvimento, pode comprar a aplicação <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> que também impedirá que este diálogo seja novamente mostrado.<br><br>
-            Pode encontrar mais opções de suporte ao projeto <a href="http://simplemobiletools.com/donate">aqui</a>.<br><br>
+            Pode encontrar mais opções de suporte ao projeto <a href="https://simplemobiletools.com/donate">aqui</a>.<br><br>
             Obrigado!
         ]]>
     </string>
