--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -436,7 +436,7 @@
         <![CDATA[
             Привет,<br><br>
             надеюсь, вам нравится приложение. Оно не содержит рекламы, поэтому, пожалуйста, поддержите разработку, купив приложение <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>. Покупка также предотвратит повторное появление данного диалогового окна.<br><br>
-            Другие способы сделать пожертвование можно найти <a href="http://simplemobiletools.com/donate">здесь</a>.<br><br>
+            Другие способы сделать пожертвование можно найти <a href="https://simplemobiletools.com/donate">здесь</a>.<br><br>
             Спасибо!
         ]]>
     </string>
