--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -410,7 +410,7 @@
         <![CDATA[
             Hej,<br><br>
             jag hoppas att du gillar appen. Den innehåller ingen reklam. Stöd dess utveckling genom att köpa appen <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a>, som även hindrar den här dialogrutan från att visas igen.<br><br>
-            Du hittar fler donationsalternativ <a href="http://simplemobiletools.com/donate">här</a>.<br><br>
+            Du hittar fler donationsalternativ <a href="https://simplemobiletools.com/donate">här</a>.<br><br>
             Tack!
         ]]>
     </string>
