--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -409,7 +409,7 @@
         <![CDATA[
             哈囉 <br><br>
             希望您喜愛這應用程式。 它不含廣告，所以請購買應用程式 <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> 來支持開發者，這對話框也不會再出現。<br><br>
-            您可以在 <a href="http://simplemobiletools.com/donate">這裡</a> 找到更多捐贈選項。<br><br>
+            您可以在 <a href="https://simplemobiletools.com/donate">這裡</a> 找到更多捐贈選項。<br><br>
             感謝!
         ]]>
     </string>
