--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -410,7 +410,7 @@
         <![CDATA[
             Hei,<br><br>
             toivottavasti pidät sovelluksesta. Se ei sisällä mainoksia, tue sen kehitystä ostamalla <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> sovellus, tämä myös estää tämän ilmoituksen jatkossa.<br><br>
-            Lisää lahjoitusvaihtoehtoja löydät <a href="http://simplemobiletools.com/donate">täältä</a>.<br><br>
+            Lisää lahjoitusvaihtoehtoja löydät <a href="https://simplemobiletools.com/donate">täältä</a>.<br><br>
             Kiitos!
         ]]>
 
