--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -410,7 +410,7 @@
         <![CDATA[
             Hello,<br><br>
             Harap Menikmati Aplikasi Ini. Ini Tidak Ada Iklan,Mohon Beri Dukungan Pengembangan Dengan Purchase<a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Terimakasih</a> app, it will also prevent this dialog from showing up again.<br><br>
-            Kamu Dapat Memberi Donasi Dengan Mengunjungi <a href="http://simplemobiletools.com/donate">Disini</a>.<br><br>
+            Kamu Dapat Memberi Donasi Dengan Mengunjungi <a href="https://simplemobiletools.com/donate">Disini</a>.<br><br>
             Terimakasih!
         ]]>
     </string>
