--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -426,7 +426,7 @@
         <![CDATA[
             Hello,<br><br>
             hope you are enjoying the app. It contains no ads, please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.<br><br>
-            You can find more donating options <a href="http://simplemobiletools.com/donate">here</a>.<br><br>
+            You can find more donating options <a href="https://simplemobiletools.com/donate">here</a>.<br><br>
             Thank you!
         ]]>
     </string>
