--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -410,7 +410,7 @@
         <![CDATA[
             Olá,<br><br>
             Esperamos que esteja gostando do app. Ele não contém anúncios, então apoie o desenvolvimento adquirindo o <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Agradecimento ao Simple</a>, ele também bloqueia este diálogo de aparecer.<br><br>
-            Mais opções de doações <a href="http://simplemobiletools.com/donate">aqui</a>.<br><br>
+            Mais opções de doações <a href="https://simplemobiletools.com/donate">aqui</a>.<br><br>
             Obrigado!
         ]]>
     </string>
