--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -71,7 +71,7 @@
     <string name="no_files_selected">Файлы не выбраны</string>
     <string name="saving">Сохранение…</string>
     <string name="could_not_create_folder">Не удалось создать папку \"%s\"</string>
-    <string name="could_not_create_file">Не удалось создать файл \"%\"</string>
+    <string name="could_not_create_file">Не удалось создать файл \"%s\"</string>
 
     <!-- Create new -->
     <string name="create_new">Создать</string>
