add short versions of week names, do not always use 3 characters

--- a/commons/src/main/res/values-br/strings.xml
+++ b/commons/src/main/res/values-br/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">S</string>
 
+    <string name="monday_short">Lun</string>
+    <string name="tuesday_short">Meu</string>
+    <string name="wednesday_short">Mer</string>
+    <string name="thursday_short">Yao</string>
+    <string name="friday_short">Gwe</string>
+    <string name="saturday_short">Sad</string>
+    <string name="sunday_short">Sul</string>
+
     <!-- About -->
     <string name="about">About</string>
     <string name="website_label">For the source codes visit</string>
