--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -391,6 +391,14 @@
     <string name="saturday_letter">DS</string>
     <string name="sunday_letter">DG</string>
 
+    <string name="monday_short">Dil</string>
+    <string name="tuesday_short">Dim</string>
+    <string name="wednesday_short">Dim</string>
+    <string name="thursday_short">Dij</string>
+    <string name="friday_short">Div</string>
+    <string name="saturday_short">Dis</string>
+    <string name="sunday_short">Diu</string>
+
     <!-- About -->
     <string name="about">Sobre</string>
     <string name="website_label">Més aplicacions senzilles i codi font a</string>
