--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -406,6 +406,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">N</string>
 
+    <string name="monday_short">Pon</string>
+    <string name="tuesday_short">Úte</string>
+    <string name="wednesday_short">Stř</string>
+    <string name="thursday_short">Čtv</string>
+    <string name="friday_short">Pát</string>
+    <string name="saturday_short">Sob</string>
+    <string name="sunday_short">Ned</string>
+
     <!-- About -->
     <string name="about">O aplikaci</string>
     <string name="website_label">Pro zdrojové kódy navštivte</string>
