--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">L</string>
     <string name="sunday_letter">S</string>
 
+    <string name="monday_short">Man</string>
+    <string name="tuesday_short">Tir</string>
+    <string name="wednesday_short">Ons</string>
+    <string name="thursday_short">Tor</string>
+    <string name="friday_short">Fre</string>
+    <string name="saturday_short">Lør</string>
+    <string name="sunday_short">Søn</string>
+
     <!-- About -->
     <string name="about">Om</string>
     <string name="website_label">For at se kildekoden besøg</string>
