--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">L</string>
     <string name="sunday_letter">S</string>
 
+    <string name="monday_short">Maa</string>
+    <string name="tuesday_short">Tii</string>
+    <string name="wednesday_short">Kes</string>
+    <string name="thursday_short">Tor</string>
+    <string name="friday_short">Per</string>
+    <string name="saturday_short">Lau</string>
+    <string name="sunday_short">Sun</string>
+
     <!-- About -->
     <string name="about">Tietoa</string>
     <string name="website_label">Lähdekoodin löydät täältä</string>
