--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -407,6 +407,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">S</string>
 
+    <string name="monday_short">Mon</string>
+    <string name="tuesday_short">Tue</string>
+    <string name="wednesday_short">Wed</string>
+    <string name="thursday_short">Thu</string>
+    <string name="friday_short">Fri</string>
+    <string name="saturday_short">Sat</string>
+    <string name="sunday_short">Sun</string>
+
     <!-- About -->
     <string name="about">O nama</string>
     <string name="website_label">Za pregled izvornog koda posjetite</string>
