--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">D</string>
 
+    <string name="monday_short">Lun</string>
+    <string name="tuesday_short">Mar</string>
+    <string name="wednesday_short">Mer</string>
+    <string name="thursday_short">Gio</string>
+    <string name="friday_short">Ven</string>
+    <string name="saturday_short">Sab</string>
+    <string name="sunday_short">Dom</string>
+
     <!-- About -->
     <string name="about">Informazioni</string>
     <string name="website_label">Altre semplici app e codici sorgenti in</string>
