--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">토</string>
     <string name="sunday_letter">일</string>
 
+    <string name="monday_short">월요일</string>
+    <string name="tuesday_short">화요일</string>
+    <string name="wednesday_short">수요일</string>
+    <string name="thursday_short">목요일</string>
+    <string name="friday_short">금요일</string>
+    <string name="saturday_short">토요일</string>
+    <string name="sunday_short">일요일</string>
+
     <!-- About -->
     <string name="about">앱정보</string>
     <string name="website_label">소스코드 공개 링크</string>
