--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">Z</string>
     <string name="sunday_letter">Z</string>
 
+    <string name="monday_short">Maa</string>
+    <string name="tuesday_short">Din</string>
+    <string name="wednesday_short">Woe</string>
+    <string name="thursday_short">Don</string>
+    <string name="friday_short">Vri</string>
+    <string name="saturday_short">Zat</string>
+    <string name="sunday_short">Zon</string>
+
     <!-- About -->
     <string name="about">Over</string>
     <string name="website_label">Bezoek voor de broncode</string>
