--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -403,6 +403,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">N</string>
 
+    <string name="monday_short">Pon</string>
+    <string name="tuesday_short">Wto</string>
+    <string name="wednesday_short">Śro</string>
+    <string name="thursday_short">Czw</string>
+    <string name="friday_short">Pią</string>
+    <string name="saturday_short">Sob</string>
+    <string name="sunday_short">Nie</string>
+
     <!-- About -->
     <string name="about">O aplikacji</string>
     <string name="website_label">Nasza strona internetowa:</string>
