--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">D</string>
 
+    <string name="monday_short">seg</string>
+    <string name="tuesday_short">ter</string>
+    <string name="wednesday_short">qua</string>
+    <string name="thursday_short">Qui</string>
+    <string name="friday_short">sex</string>
+    <string name="saturday_short">sáb</string>
+    <string name="sunday_short">dom</string>
+
     <!-- About -->
     <string name="about">Acerca</string>
     <string name="website_label">Mais aplicações Simple e código fonte em</string>
