--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -415,6 +415,14 @@
     <string name="saturday_letter">С</string>
     <string name="sunday_letter">В</string>
 
+    <string name="monday_short">Пон</string>
+    <string name="tuesday_short">Вто</string>
+    <string name="wednesday_short">Сре</string>
+    <string name="thursday_short">Чет</string>
+    <string name="friday_short">Пят</string>
+    <string name="saturday_short">Суб</string>
+    <string name="sunday_short">Вос</string>
+
     <!-- About -->
     <string name="about">О приложении</string>
     <string name="website_label">Исходный код можно найти по адресу</string>
