--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -407,6 +407,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">N</string>
 
+    <string name="monday_short">Pon</string>
+    <string name="tuesday_short">Uto</string>
+    <string name="wednesday_short">Str</string>
+    <string name="thursday_short">Štv</string>
+    <string name="friday_short">Pia</string>
+    <string name="saturday_short">Sob</string>
+    <string name="sunday_short">Ned</string>
+
     <!-- About -->
     <string name="about">O aplikácií</string>
     <string name="website_label">Pre zdrojové kódy navštívte</string>
