--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">C</string>
     <string name="sunday_letter">P</string>
 
+    <string name="monday_short">Paz</string>
+    <string name="tuesday_short">Sal</string>
+    <string name="wednesday_short">Çar</string>
+    <string name="thursday_short">Per</string>
+    <string name="friday_short">Cum</string>
+    <string name="saturday_short">Cum</string>
+    <string name="sunday_short">Paz</string>
+
     <!-- About -->
     <string name="about">Hakkında</string>
     <string name="website_label">Kaynak kodları için ziyaret edin</string>
