--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">六</string>
     <string name="sunday_letter">日</string>
 
+    <string name="monday_short">周一</string>
+    <string name="tuesday_short">周二</string>
+    <string name="wednesday_short">周三</string>
+    <string name="thursday_short">周四</string>
+    <string name="friday_short">周五</string>
+    <string name="saturday_short">周六</string>
+    <string name="sunday_short">周日</string>
+
     <!-- About -->
     <string name="about">关于</string>
     <string name="website_label">应用源码</string>
