--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -388,6 +388,14 @@
     <string name="saturday_letter">六</string>
     <string name="sunday_letter">日</string>
 
+    <string name="monday_short">星期一</string>
+    <string name="tuesday_short">星期二</string>
+    <string name="wednesday_short">星期三</string>
+    <string name="thursday_short">星期四</string>
+    <string name="friday_short">星期五</string>
+    <string name="saturday_short">星期六</string>
+    <string name="sunday_short">星期日</string>
+
     <!-- About -->
     <string name="about">關於</string>
     <string name="website_label">觀看原始碼</string>
