--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">श</string>
     <string name="sunday_letter">र</string>
 
+    <string name="monday_short">Mon</string>
+    <string name="tuesday_short">Tue</string>
+    <string name="wednesday_short">Wed</string>
+    <string name="thursday_short">Thu</string>
+    <string name="friday_short">Fri</string>
+    <string name="saturday_short">Sat</string>
+    <string name="sunday_short">Sun</string>
+
     <!-- About -->
     <string name="about">के बारे में</string>
     <string name="website_label">अधिक एप्पस व सोर्स कोड</string>
