--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">SZ</string>
     <string name="sunday_letter">V</string>
 
+    <string name="monday_short">Mon</string>
+    <string name="tuesday_short">Tue</string>
+    <string name="wednesday_short">Wed</string>
+    <string name="thursday_short">Thu</string>
+    <string name="friday_short">Fri</string>
+    <string name="saturday_short">Sat</string>
+    <string name="sunday_short">Sun</string>
+
     <!-- About -->
     <string name="about">Információ</string>
     <string name="website_label">További egyszerű alkalmazások és a forráskód itt</string>
