--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">D</string>
 
+    <string name="monday_short">Mon</string>
+    <string name="tuesday_short">Tue</string>
+    <string name="wednesday_short">Wed</string>
+    <string name="thursday_short">Thu</string>
+    <string name="friday_short">Fri</string>
+    <string name="saturday_short">Sat</string>
+    <string name="sunday_short">Sun</string>
+
     <!-- About -->
     <string name="about">Sobre</string>
     <string name="website_label">Mais aplicativos Simple e código-fonte em</string>
