--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -389,6 +389,14 @@
     <string name="saturday_letter">L</string>
     <string name="sunday_letter">S</string>
 
+    <string name="monday_short">Mån</string>
+    <string name="tuesday_short">Tis</string>
+    <string name="wednesday_short">Ons</string>
+    <string name="thursday_short">Tor</string>
+    <string name="friday_short">Fre</string>
+    <string name="saturday_short">Lör</string>
+    <string name="sunday_short">Sön</string>
+
     <!-- About -->
     <string name="about">Om</string>
     <string name="website_label">Du hittar källkoden på</string>
