--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -415,13 +415,13 @@
     <string name="saturday_letter">С</string>
     <string name="sunday_letter">В</string>
 
-    <string name="monday_short">Пон</string>
-    <string name="tuesday_short">Вто</string>
-    <string name="wednesday_short">Сре</string>
-    <string name="thursday_short">Чет</string>
-    <string name="friday_short">Пят</string>
-    <string name="saturday_short">Суб</string>
-    <string name="sunday_short">Вос</string>
+    <string name="monday_short">пн</string>
+    <string name="tuesday_short">вт</string>
+    <string name="wednesday_short">ср</string>
+    <string name="thursday_short">чт</string>
+    <string name="friday_short">пт</string>
+    <string name="saturday_short">сб</string>
+    <string name="sunday_short">вс</string>
 
     <!-- About -->
     <string name="about">О приложении</string>
